# checkin-viz

./: .env.sops  .gitignore  DISCORD_BOT_TESTING.md  Dockerfile  Dockerfile.bot  Dockerfile.huey  Dockerfile.rq  Dockerfile.seed_local  HOW_TO_TEST_DISCORD.md  QUICK_START.md  README.md  SETUP.md  TROUBLESHOOTING.md  age-keys.txt  diagnose_bot.py  docker-compose-local.yml  docker-compose.yml  key.txt  pyproject.toml  replit.nix  run_local.sh  test_bot_outgoing.py  test_discord_message.py  test_discord_setup.py  test_medal_messages.py  test_medal_steal.sh  test_self_steal.sh
.gitea/workflows/: test.yaml
database/: add_bmr_logs.sql  alter_bmr_logs_constraints.sql  seed.sh
scripts/: encrypt
src/: auto_knockout.py  base_queries.py  bot.py  chart.py  discord_bot.py  green.py  helpers.py  main.py  medal_log.py  medals.py  rule_sets.py  tasks.py  utils.py
src/slash_commands/: bmr.py  calc.py  join.py  quit.py  testpodium.py  warning_test.py
src/static/: layout.css
src/templates/: base.html  calc.html  challenge.html  challenger.html  index.html  version.html
tests/: test_auto_knockout.py  test_medals.py  test_version.py
