[tool.poetry]
name = "cgf-challenge"
version = "0.1.0"
description = ""
authors = ["Thomas Crescenzi <trescenzi@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
requests = "*"
svgwrite = "*"
flask = "*"
gunicorn = "*"
cairosvg = "*"
psycopg = {extras = ["binary"], version = "*"}
python-dotenv = "*"
pytz = "*"
flask-cors = "^4.0.1"
twilio = "^9.2.3"
py-cord = {version = ">=2.8.0rc2,<2.9", extras = ["speed"]}
simpleeval = "^1.0.3"
rq = "^2.6.1"
valkey = "^6.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
